refactor: remove ListAssert component and related files; introduce StockItem management features
- Deleted ListAssertComponent, its template, styles, and tests.
- Added StockItem management components including list, detail, and transaction handling.
- Updated constants for API endpoints.
- Enhanced Schema to include stock item page details.
- Implemented StockItemService for CRUD operations on stock items.
- Created asset transactions component for displaying and managing stock transactions.
- Updated styles for new components to ensure consistent UI.
- Added tests for new components to ensure functionality.

--- a/src/app/stock-module/list-stock/list-stock.component.html
+++ b/src/app/stock-module/list-stock/list-stock.component.html
@@ -1,4 +1,4 @@
-<app-bread pageName="List Assets" />
+<app-bread pageName="List Stock Items" />
 
 <div class="list-container" *ngIf="accessChecked">
   <div class="title-section">
@@ -50,14 +50,14 @@
         </option>
       </select>
 
-      <!-- Filter by asset type: -->
+      <!-- Filter by stock type: -->
       <select
         class="form-select me-2"
-        [(ngModel)]="selectedAssetType"
-        (change)="onAssetTypeChange()"
+        [(ngModel)]="selectedStockType"
+        (change)="onStockTypeChange()"
       >
         <option value="">All Types</option>
-        <option *ngFor="let item of assetTypes" [value]="item">
+        <option *ngFor="let item of stockTypes" [value]="item">
           {{ item }}
         </option>
       </select>
@@ -73,7 +73,7 @@
           {{ page.addAction }}
         </a>
 
-        <a 
+        <a
         *ngIf="userService.canAccess(FEATURE_NAMES.exportAssets)"
         class="btn btn-dark" (click)="exportToCsv()"> Export to CSV </a>
       </div>
@@ -106,7 +106,7 @@
       <div>{{ item.categoryName }}</div>
 
       <div class="mobile-header">Type</div>
-      <div>{{ item.assetType || "---" }}</div>
+      <div>{{ item.stockType || "---" }}</div>
 
       <div>
         <div class="dropdown">
@@ -139,7 +139,7 @@
               </button>
             </li>
             <li>
-              <button class="dropdown-item bg-danger" 
+              <button class="dropdown-item bg-danger"
               (click)="onDelete(item)">
                 <i class="bi bi-trash"></i> Delete
               </button>
@@ -154,11 +154,11 @@
       </div>
     </div>
     <app-transaction
-      *ngIf="selectedAsset && transaction"
-      [assert]="selectedAsset"
+      *ngIf="selectedStockItem && transaction"
+      [assert]="selectedStockItem"
       [data]="transaction"
       [transactionType]="transactionType"
-      (onClose)="selectedAsset = undefined"
+      (onClose)="selectedStockItem = undefined"
       [isAdd]="true"
       itemId="add"
     />
