--- a/src/app/stock-module/list-stock/list-stock.component.html
+++ b/src/app/stock-module/list-stock/list-stock.component.html
@@ -124,7 +124,7 @@
             aria-labelledby="dropdownMenuButton"
           >
             <li>
-              <a class="dropdown-item" [routerLink]="['/asset', item.id]">
+              <a class="dropdown-item" [routerLink]="['/stock', item.id]">
                 <i class="bi bi-pencil-square"></i> Details
               </a>
             </li>
