--- a/src/app/dashboard/site-navigation/site-navigation.component.scss
+++ b/src/app/dashboard/site-navigation/site-navigation.component.scss
@@ -8,9 +8,14 @@
   flex-direction: column;
 
   // Module Selector Section
-  .module-selector-container {
-    border-bottom: 1px solid var(--bs-gray-700);
-    background: var(--bs-gray-900);
+  .module-selector-item {
+    margin-bottom: 1rem;
+    
+    .module-selector-container {
+      padding: 0.75rem 1rem;
+      border-bottom: 1px solid var(--bs-gray-700);
+      background: var(--bs-gray-900);
+    }
   }
 
   // Navigation Groups
