--- a/src/app/dashboard/overview/overview.component.html
+++ b/src/app/dashboard/overview/overview.component.html
@@ -1,11 +1,14 @@
 <div class="overview-container" *ngIf="stats && !loading">
   <div class="grid-3 mb-5">
-    <app-numbers-chart  (itemClicked)="onRowClick($event)"  [items]="counts" *ngIf="counts && counts.length" />
+    <app-numbers-chart
+      (itemClicked)="onRowClick($event)"
+      [items]="counts"
+      *ngIf="counts && counts.length"
+    />
     <app-table
       [data]="stats.topIssuedAssets"
       [columns]="topIssuedAssets"
       componentTitle="Most Issued Items"
-     
     />
     <app-table
       [data]="stats.lowStock"
@@ -17,8 +20,12 @@
       [data]="locationDonut"
       componentTitle="Issued by Location"
     />
-    <app-bar-chart *ngIf="stockBar" componentTitle="Stock Levels" [data]="stockBar"/>
-    <app-line-chart componentTitle="Usage Trends"/>
+    <app-bar-chart
+      *ngIf="stockBar"
+      componentTitle="Stock Levels"
+      [data]="stockBar"
+    />
+    <app-line-chart componentTitle="Usage Trends" />
   </div>
 </div>
 
