--- a/src/app/asset-module/asset-list/asset-list.component.html
+++ b/src/app/asset-module/asset-list/asset-list.component.html
@@ -12,24 +12,28 @@
 
   <!-- Search and Filters -->
   <div class="row mb-4">
-    <div class="col-md-6">
-      <div class="input-group">
-        <span class="input-group-text">
+    <div class="col-md-8">
+      <div class="input-group input-group-lg rounded-pill shadow-sm">
+        <span class="input-group-text bg-dark text-white border-0 rounded-start-pill">
           <i class="bi bi-search"></i>
         </span>
         <input
           type="text"
-          class="form-control"
+          class="form-control bg-dark text-white border-0 rounded-0"
           placeholder="Search assets by name, code, or category..."
           [(ngModel)]="searchQuery"
           (keyup.enter)="onSearch()"
+          aria-label="Search assets"
         >
-        <button class="btn btn-outline-secondary" type="button" (click)="onSearch()">
+        <button class="btn btn-outline-secondary border-0 rounded-0" type="button" (click)="onSearch()">
           Search
+        </button>
+        <button class="btn btn-outline-light border-0 rounded-end-pill" type="button" (click)="searchQuery=''">
+          <i class="bi bi-x-circle"></i>
         </button>
       </div>
     </div>
-    <div class="col-md-6 d-flex justify-content-end">
+    <div class="col-md-4 d-flex justify-content-end align-items-center">
       <button class="btn btn-outline-light me-2">
         <i class="bi bi-funnel me-2"></i>
         Filters
